--- a/src/SEVRA_frontend/public/style2.css
+++ b/src/SEVRA_frontend/public/style2.css
@@ -43,6 +43,12 @@
     opacity: 0.4;
     }
 }
+.fade-out {
+    opacity: 0;
+}
+.fade-in {
+    opacity: 1;
+}
 
 :root {
     --neon-blue: #00ffff;      /* Simple questions */
@@ -67,8 +73,15 @@ body {
     overflow-x: hidden;
     position: relative;
     min-height: 100vh;
+    scroll-behavior: smooth;
 }
 
+.video-container video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    filter: brightness(0.6);
+}
 .video-container {
     position: absolute;
     top: 0;
@@ -76,11 +89,24 @@ body {
     width: 100%;
     height: 100vh;
     z-index: -1;
+    opacity: 1; 
+    transition: opacity 0.8s ease-in-out;
 }
 video {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+/* For smooth transition*/
+.introduction, .assets-showcase {
+    height: 100vh;
+    position: relative;
+    overflow: hidden;
+    transition: opacity 0.8s ease-in-out;
+}
+.introduction, .assets-showcase {
+    background: radial-gradient(circle at center, rgba(0, 255, 255, 0.1) 0%, rgba(0, 0, 0, 0.8) 70%, black 100%);
 }
 
 /* navbar */
@@ -196,22 +222,6 @@ video {
     background: radial-gradient(circle at center, rgba(0, 255, 255, 0.1) 0%, rgba(0, 0, 0, 0.8) 70%, black 100%);
 }
 
-.video-background {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-}
-
-.video-background video {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    filter: brightness(0.4);
-}
-
 .intro-content {
     display: flex;
     flex-direction: column;
@@ -295,7 +305,7 @@ video {
 
 .showcase-title {
     position: absolute;
-    top: 2rem;
+    top: 15vh;
     left: 50%;
     transform: translateX(-50%);
     font-family: 'EarthOrbiterBold', sans-serif;
@@ -314,17 +324,16 @@ video {
     padding: 0 2rem;
     animation: scroll 60s linear infinite;
     z-index: 0;
+    margin-top: 10vh;
 }
-.artworks:hover {
-    animation-play-state: paused;
-}
+.artworks:hover {animation-play-state: paused;}
 
 .artwork {
     position: relative;
     width: 50vw; 
     height: 60vh;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center; 
     overflow: hidden; 
 }
@@ -433,6 +442,8 @@ video {
     position: relative;
     overflow: hidden;
     background: radial-gradient(circle at center, rgba(0, 255, 255, 0.1) 0%, rgba(0, 0, 0, 0.8) 70%, black 100%);
+    opacity: 0;
+    transition: opacity 0.8s ease-in-out;
 }
 
 .ai-title {
@@ -712,9 +723,9 @@ video {
 .binary-element {
     position: absolute;
     font-family: 'Courier New', monospace;
-    color: var(--neon-blue);
+    color: var(--neon-green);
     animation: binaryFade 1.5s infinite alternate;
-    text-shadow: 0 0 5px var(--neon-blue);
+    text-shadow: 0 0 5px var(--neon-green);
 }
 
 /* Decorations */
